Multiple Changes - Comments added in solidity - Reward and Penalty function added - Long Text cropped to elipsis - Minor UI Bugs Resolved - Image Slider Partially added - Pagination Commented

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -185,3 +185,9 @@ html, body {
 #my-reward {
   font-weight: bold;
 }
+
+.text-elipsis {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
